Update libs. Fixed some warnings